<resources>
    <string name="app_name">Погода</string>
    <string name="city">Москва</string>
    <string name="search_city">Искать</string>
    <string name="detail">Подробнее</string>
    <string name="date">Сегодня, 12 Сентября</string>
    <string name="temperature">29</string>
    <string name="cloudly">Облачно</string>
    <string name="wind">Ветер</string>
    <string name="windSpeed">10 км/ч</string>
    <string name="divider">|</string>
    <string name="humidity">Влаж</string>
    <string name="back">Назад</string>
    <string name="forDay">По дням</string>
    <string name="today">Сегодня</string>
    <string name="today_example">Сен, 12</string>
    <string name="degree">°</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_state_of_weather">Изображение состояния погоды</string>
</resources>