<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    tools:context=".presentation.fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/blackBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLocality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_location"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvLocality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/overpass_bold"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@color/blue_background"
        app:layout_constraintBottom_toTopOf="@id/weatherBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blackBlock" />

    <!--    <com.google.android.material.internal.BaselineLayout
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherBlock"
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/background_rectangle"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvDateToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/overpass_regular"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/overpass_regular"
            android:textColor="@color/white"
            android:textSize="100sp"
            app:layout_constraintEnd_toEndOf="@+id/tvDateToday"
            app:layout_constraintStart_toStartOf="@+id/tvDateToday"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/overpass_regular"
            android:text="@string/degree"
            android:textColor="@color/white"
            android:textSize="72sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tvTemperature"
            app:layout_constraintEnd_toEndOf="@+id/tvDateToday"
            app:layout_constraintStart_toEndOf="@+id/tvTemperature"
            app:layout_constraintTop_toTopOf="@+id/tvTemperature" />

        <TextView
            android:id="@+id/tvCloudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass_bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/tvDateToday"
            app:layout_constraintStart_toStartOf="@+id/tvDateToday"
            app:layout_constraintTop_toBottomOf="@+id/tvTemperature" />

        <ImageView
            android:id="@+id/ic_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_windy"
            app:layout_constraintBottom_toBottomOf="@+id/tvDividerTop"
            app:layout_constraintEnd_toStartOf="@+id/tvWind"
            app:layout_constraintTop_toTopOf="@+id/tvDividerTop" />

        <TextView
            android:id="@+id/tvWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:text="@string/wind"
            android:textAppearance="@style/textStyle"
            app:layout_constraintBottom_toBottomOf="@+id/tvDividerTop"
            app:layout_constraintEnd_toStartOf="@id/tvDividerTop"
            app:layout_constraintTop_toTopOf="@id/tvDividerTop" />

        <TextView
            android:id="@+id/tvDividerTop"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:text="@string/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCloudy" />

        <TextView
            android:id="@+id/windResult"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/windSpeed"
            app:layout_constraintStart_toEndOf="@+id/tvDividerTop"
            app:layout_constraintTop_toTopOf="@id/tvDividerTop" />

        <ImageView
            android:id="@+id/ic_hum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_hum"
            app:layout_constraintBottom_toBottomOf="@+id/tvDividerBottom"
            app:layout_constraintEnd_toStartOf="@+id/tvHumidity"
            app:layout_constraintTop_toTopOf="@+id/tvDividerBottom" />

        <TextView
            android:id="@+id/tvDividerBottom"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDividerTop" />

        <TextView
            android:id="@+id/humResult"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/windSpeed"
            app:layout_constraintStart_toEndOf="@id/tvDividerBottom"
            app:layout_constraintTop_toTopOf="@id/tvDividerBottom"

            />

        <TextView
            android:id="@+id/tvHumidity"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:text="@string/humidity"
            app:layout_constraintBottom_toBottomOf="@+id/tvDividerBottom"
            app:layout_constraintEnd_toStartOf="@id/tvDividerBottom"
            app:layout_constraintTop_toTopOf="@id/tvDividerBottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btn_detail"
        android:layout_width="220dp"
        android:layout_height="64dp"
        android:background="@drawable/button_background"
        android:elevation="4dp"
        android:fontFamily="@font/overpass_regular"
        android:gravity="center"
        android:text="@string/detail"
        android:textColor="@color/blue_text_button"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherBlock" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>